Fix Dropdown Text Wrapping

--- a/style.css
+++ b/style.css
@@ -1044,12 +1044,16 @@ body {
     color: black;
     padding: 12px 16px;
     text-decoration: none;
+    font-family: "Trebuchet MS", Helvetica, sans-serif;
     display: block;
     text-align: left;
+    width:100%;
 }
 
 .sub-menu a:hover {
     background-color: #85b4d4;
+    font-family: "Trebuchet MS", Helvetica, sans-serif;
+    width:100%;
     color: white;
 }
 
